--- a/talent/layout.html
+++ b/talent/layout.html
@@ -1,32 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
-    <head>
-
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
-
-        <link href="{{ url_for('static', filename = 'favicon-96x96.png') }}" rel="icon" type="image/png" sizes="96x96">favicon-96x96.png
-
-        <title>BRAXTER</title>
-
-    </head>
-    <body style="background-color:black;">
-        <nav>
-            <h1 class ="braxter"><a href="/" style="color: #ffd651">BRAXTER</a> </h1>
-
-            <a href="/" style="color: white">
-                <button type="abt" class ="navigation1 btn btn-outline-light">About us</button></a>
-
-            <a href="/products" style="color: white">
-                <button type="prod" class ="navigation2 btn btn-outline-light">Products</button></a>
-
-            <a href="/contacts" style="color: white">
-                <button type="cont" class ="navigation3 btn btn-outline-light">Contacts</button></a>
-        </nav>
-        <main class="navigation4">
-            {% block main %}{% endblock %}
-        </main>
+<html lang="en">y
+    <body> yoo</body>
     </body>
 </html>
