--- a/talent/layout.html
+++ b/talent/layout.html
@@ -9,11 +9,11 @@
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg" style="background-color:#04497c; padding-right: 2cm;">
+        <nav class="navbar navbar-expand-lg" style="background-color:lightgray; padding-right: 2cm;">
 
             <div>
                 <ul class="nav">
-                    <li class="navbar-brand" style="color: white;">Talent Lim &ensp;</li>
+                    <li class="navbar-brand" style="color: lightseagreen;">Talent Lim &ensp;</li>
                 </ul>
             </div>
 
