--- a/talent/layout.html
+++ b/talent/layout.html
@@ -9,11 +9,11 @@
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg" style="background-color:lightgray; padding-right: 2cm;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 2cm;">
 
             <div>
                 <ul class="nav">
-                    <li class="navbar-brand" style="color: lightseagreen;">Talent Lim &ensp;</li>
+                    <li class="navbar-brand">Talent Lim &ensp;</li>
                 </ul>
             </div>
 
@@ -23,7 +23,7 @@
         </nav>
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" >
+            <div id = "sidebar" class="sidebar col-lg-2 col-md-3 bg-light " >
                 <h2>Home</h2>
             </div>
             <div class="main col-lg-10 col-md-9">
