--- a/talent/about.html
+++ b/talent/about.html
@@ -7,12 +7,12 @@
 
 {% block body %}
 <div class="text-center">
-    <h1 id="welcome">Welcome to Rosetta!</h1>
+    <h1 id="welcome">Welcome to Resume!</h1>
 </div>
 <div class="text-center">
     <h5 id="about">About Us</h5>
     <p id="about1">
-        EDMA online encyclopedia  by CodingCoco | Talent Lim.
+        Online Resume by CodingCoco | Talent Lim.
     </p><br>
 </div>
 
@@ -21,6 +21,4 @@
 </footer>
 {% endblock %}
 
-{% block script %}
-    <script src="{% static 'encyclopedia/about.js' %}"></script>    
-{% endblock %}
+<script src="about.js"></script>    
