--- a/talent/layout.html
+++ b/talent/layout.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
     <head>
-        <title>{% block title %}{% endblock %}</title>
+        <title>Talent</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="~/documents/github/talent/static/styles.css" rel="stylesheet">
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
@@ -23,7 +23,7 @@
         </nav>
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-2 col-md-3 bg-light " >
+            <div id = "sidebar" class="sidebar col-lg-2 col-md-3  " >
                 <h2>Home</h2>
             </div>
             <div class="main col-lg-10 col-md-9">
