--- a/talent/about.html
+++ b/talent/about.html
@@ -1,11 +1,3 @@
-{% extends "encyclopedia/layout.html" %}
-{% load static %}
-
-{% block title %}
-    About Us
-{% endblock %}
-
-{% block body %}
 <div class="text-center">
     <h1 id="welcome">Welcome to Resume!</h1>
 </div>
@@ -19,6 +11,5 @@
 <footer class="small text-center text-muted">
     Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
 </footer>
-{% endblock %}
 
-<script src="about.js"></script>    
+<script src="styles.css"></script>    
