--- a/talent/about.html
+++ b/talent/about.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <title>About</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+        <link href="~/documents/github/talent/static/styles.css" rel="stylesheet">
+        <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
+    </head>
+
 <div class="text-center">
     <h1 id="welcome">Welcome to Resume!</h1>
 </div>
