--- a/talent/about.html
+++ b/talent/about.html
@@ -8,6 +8,9 @@
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
 
+    <script src="styles.css"></script>    
+<script src="about.js"></script> 
+
 <div class="text-center">
     <h1 id="welcome">Welcome to Resume!</h1>
 </div>
