--- a/talent/about.html
+++ b/talent/about.html
@@ -10,7 +10,7 @@
 
     <script src="styles.css"></script>    
 <script src="about.js"></script> 
-
+<head>afae</head>
 <div class="text-center">
     <h1 id="welcome">Welcome to Resume!</h1>
 </div>
