--- a/talent/about.html
+++ b/talent/about.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>About</title>
+        <title>Welcome!</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
@@ -14,7 +14,7 @@
 <div class="text-center">
     <h5 id="about">About Us</h5>
     <p id="about1">
-        Online Resume by CodingCoco | Talent Lim.
+        Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>.
     </p><br>
 </div>
 
@@ -22,4 +22,5 @@
     Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
 </footer>
 
+<!-- <script src="about.js"></script>  -->
 </html>
