--- a/talent/about.html
+++ b/talent/about.html
@@ -2,19 +2,19 @@
 
 <html lang="en">
     <head>
-        <title>Welcome!</title>
+        <title>Kang</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
 
 <div class="text-center">
-    <h1 id="welcome">Welcome to Resume!</h1>
+    <h1 id="welcome">Welcome to Kang!</h1>
 </div>
 <div class="text-center">
     <h5 id="about">About Us</h5>
     <p id="about1">
-        Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>.
+        Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>
     </p><br>
 </div>
 
