--- a/talent/Resume.html
+++ b/talent/Resume.html
@@ -4,7 +4,7 @@
     <head>
         <title>Talent</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
-        <link href="~/documents/github/talent/static/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
     <body>
