--- a/talent/about.html
+++ b/talent/about.html
@@ -5,11 +5,11 @@
         <title>Kang</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
-        <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
+        <link rel="icon"href="android-chrome-512x512.png">
     </head>
 
 <div class="text-center">
-    <h1 id="welcome">Welcome to Kang!</h1>
+    <h1 id="welcome">Welcome to Kang !</h1>
 </div>
 <div class="text-center">
     <h5 id="about">About Us</h5>
