--- a/talent/Resume.html
+++ b/talent/Resume.html
@@ -31,3 +31,7 @@
 
     </body>
 </html>
+
+<footer class="small text-center text-muted">
+    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
+</footer>
