--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -28,7 +28,10 @@
             <div class="main col-lg-10 col-md-9">
             </div>
         </div>
-
+        
+        <div>
+            <img src="IMG_0036.JPG" alt="My Picture">
+        </div>
     </body>
 </html>
 
