--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -29,9 +29,10 @@
             </div>
         </div>
         
-        <div>
-            <img src="IMG_0036.JPG" alt="My Picture">
+        <div class="main col-lg-10 col-md-9">
+                <img src="IMG_0036.JPG" alt="My Picture">
         </div>
+            <img src="IMG_0036.JPG" alt="My Picture">
     </body>
 </html>
 
