--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -12,7 +12,7 @@
 
             <div>
                 <ul class="nav">
-                    <li class="navbar-brand">Talent Lim &ensp;</li>
+                    <li class="navbar-brand"><a href="index.html">Talent Lim</a></li> 
                 </ul>
             </div>
 
@@ -23,7 +23,7 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-2 col-md-3  " >
-                <h2>Home</h2>
+                <h2>Talent Lim</h2>
             </div>
             <div class="main col-lg-10 col-md-9">
             </div>
