--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -12,7 +12,7 @@
 
             <div>
                 <ul class="nav">
-                    <li class="navbar-brand"><a href="index.html">Talent Lim</a></li> 
+                    <li class="navbar-brand"><a href="index.html">Kang</a></li> 
                 </ul>
             </div>
 
@@ -32,7 +32,6 @@
         <div class="main col-lg-10 col-md-9">
                 <img src="IMG_0036.JPG" alt="My Picture">
         </div>
-            <img src="IMG_0036.JPG" alt="My Picture">
     </body>
 </html>
 
