--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="main col-lg-10 col-md-9">
-                <img src="IMG_0036.JPG" alt="My Picture">
+            <center> <img src="IMG_0036.JPG" alt="My Picture"></center>
         </div>
     </body>
 </html>
