--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="main col-lg-10 col-md-9">
-            <center> <img src="IMG_0036.JPG" alt="My Picture"></center>
+            <center> <img src="IMG_0036.JPG" alt="My Picture" width="450" height="225"></center>
             <footer class="small text-center text-muted">
                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
             </footer>
