--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="main col-lg-10 col-md-9">
-                <center> <img src="IMG_0036.JPG" alt="My Picture" width="325" height="450"></center>
+               <img src="IMG_0036.JPG" alt="My Picture" width="350" height="450">
                 <footer class="small text-center text-muted">
                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
             </footer>
