--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -8,7 +8,7 @@
         <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 0.5cm;">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 2cm;">
 
             <div>
                 <ul class="nav">
@@ -19,7 +19,7 @@
             <div>
             </div>
             
-        </nav>
+        </nav>-->
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-2 col-md-3  " >
