--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -29,7 +29,7 @@
                 </footer>
             </div>
 
-            <div class="main col-lg-10 col-md-9">
+            <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
                <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
             </div>
         </div>
