--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -22,7 +22,7 @@
         </nav>-->
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-2 col-md-3  " >
+            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #fdffd7;" >
                 <h4>Talent Lim</h4>
                 <footer class="small text-center text-muted">
                     Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
