--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -22,15 +22,15 @@
         </nav>-->
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #fdffd7;" >
-                <h4>Talent Lim</h4>
-                <footer class="small text-center text-muted">
-                    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
-                </footer>
+            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #d7fdff;" >
             </div>
 
             <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
                <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
+               <h4>Talent Lim</h4>
+               <footer class="small text-center text-muted">
+                Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
+            </footer>
             </div>
         </div>
     </body>
