--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -26,7 +26,9 @@
             </div>
 
             <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
-               <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
+               <div id="picture">
+                    <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
+                </div>
                <h4>Talent Lim</h4>
                <footer class="small text-center text-muted">
                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
