--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -22,7 +22,7 @@
         </nav>-->
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #fcc451;" >
+            <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #d2fcfb;" >
             </div>
 
             <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
