--- a/Kang/about.html
+++ b/Kang/about.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 
-<html lang="en" style="background-color: #fdffd7;">
-    <head>
-        <title>Kang</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
-        <link href="styles.css" rel="stylesheet">
-        <link rel="icon"href="android-chrome-512x512.png">
-    </head>
+<html lang="en">
 
-<div class="text-center">
-    <h1 id="welcome">Welcome to Kang !</h1>
-</div>
-<div class="text-center">
-    <h5 id="about">About</h5>
-    <p id="about1">
-        Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>
-    </p><br>
-</div>
+<main style="background-color: #fdffd7;">
+        <head>
+            <title>Kang</title>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+            <link href="styles.css" rel="stylesheet">
+            <link rel="icon"href="android-chrome-512x512.png">
+        </head>
 
-<footer class="small text-center text-muted">
-    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
-</footer>
+    <div class="text-center">
+        <h1 id="welcome">Welcome to Kang !</h1>
+    </div>
+    <div class="text-center">
+        <h5 id="about">About</h5>
+        <p id="about1">
+            Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>
+        </p><br>
+    </div>
+
+    <footer class="small text-center text-muted">
+        Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
+    </footer>
+</main>
 
 <!-- <script src="about.js"></script>  -->
 </html>
