--- a/Kang/about.html
+++ b/Kang/about.html
@@ -9,6 +9,11 @@
             <link href="styles.css" rel="stylesheet">
             <link rel="icon"href="android-chrome-512x512.png">
         </head>
+    
+     
+    <div class="row">
+        <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #d2fcfb;" >
+    </div>
 
     <div class="text-center">
         <h1 id="welcome">Welcome to Kang !</h1>
