--- a/Kang/about.html
+++ b/Kang/about.html
@@ -12,7 +12,7 @@
 
     
 <div class="row">
-    <div id = "sidebar" class="sidebar col-lg-2 col-md-3" style="background-color: #d2fcfb;" >
+    <div id = "sidebar" class="sidebar col-md-3" style="background-color: #d2fcfb;" >
     </div>
 
     <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
@@ -22,7 +22,7 @@
         <div class="text-center">
             <h5 id="about">About</h5>
             <p id="about1">
-                Online Resume by CodingCoco | <a href="resume.html">Talent Lim</a>
+                Online Resume by CodingCoco | <a href="index.html">Talent Lim</a>
             </p><br>
         </div>
     
