--- a/Kang/about.html
+++ b/Kang/about.html
@@ -12,7 +12,7 @@
 
     
 <div class="row">
-    <div id = "sidebar" class="sidebar col-md-3" style="background-color: #d2fcfb;" >
+    <div id = "sidebar" class="sidebar col-xs-2 col-xs-3" style="background-color: #d2fcfb;" >
     </div>
 
     <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
