--- a/Kang/index.html
+++ b/Kang/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="main col-lg-10 col-md-9" style="background-color: #fdffd7;">
-               <div id="picture">jnce
+               <div id="picture">
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
                 </div>
                <h4>Talent Lim</h4>
