--- a/Kang/index.html
+++ b/Kang/index.html
@@ -25,7 +25,7 @@
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
             </div>
 
-            <div class="main col-lg-6 col-md-5" style="background-color: #fdffd7;">
+            <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;">
                <div id="picture">
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
                 </div>
@@ -34,6 +34,16 @@
                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
             </footer>
             </div>
+
+            <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;">
+                <div id="picture">
+                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
+                 </div>
+                <h4>Talent Lim</h4>
+                <footer class="small text-center text-muted">
+                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
+             </footer>
+             </div>
         </div>
     </body>
 </html>
