--- a/Kang/index.html
+++ b/Kang/index.html
@@ -5,7 +5,7 @@
         <title>Talent</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
-        <link rel="icon"href="{% static 'android-chrome-512x512.png' %}">
+        <link rel="icon"href="android-chrome-512x512.png">
     </head>
     <body>
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 2cm;">
@@ -23,6 +23,9 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
+                <a href="about.html">
+                    <img src="android-chrome-512x512.png" alt="About Page" width="512" height="683">   
+                </a>
             </div>
 
             <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
