--- a/Kang/index.html
+++ b/Kang/index.html
@@ -33,7 +33,7 @@
                <div id="picture">
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
                 </div>
-               <br><footer class="small text-center text-muted" id="picture_group">
+               <br><footer class="small text-center text-muted" >
                 Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
             </footer>
             </div>
