--- a/Kang/index.html
+++ b/Kang/index.html
@@ -29,13 +29,10 @@
             </div>
 
             <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
-                <br><br><br>
-               <div id="picture">
+                <br><br><br><br><br>
+               <div>
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
                 </div>
-               <br><footer class="small text-center text-muted" >
-                Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
-            </footer>
             </div>
 
             <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;">
