--- a/Kang/index.html
+++ b/Kang/index.html
@@ -35,8 +35,8 @@
                 </div>
             </div>
 
-            <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;">
-                <h4>Talent Lim</h4>
+            <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:10px">
+                <h2>Talent Lim</h2>
              </div>
         </div>
     </body>
