--- a/Kang/index.html
+++ b/Kang/index.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:30px">
-                <h1>Talent Lim</h1>
+                <h1>Hi! I'm Talent</h1>
              </div>
         </div>
     </body>
