--- a/Kang/index.html
+++ b/Kang/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Talent</title>
+        <title>Talent Lim</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
