--- a/Kang/index.html
+++ b/Kang/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <title>Talent Lim</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
     </head>
@@ -23,8 +23,11 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
+                <a href="INDEX.html">
+                    KANG
+                </a>
                 <a href="about.html">
-                    <img src="android-chrome-52x52.png" alt="About Page" width="10" height="10">   
+                    ABOUT
                 </a>
             </div>
 
