--- a/Kang/index.html
+++ b/Kang/index.html
@@ -23,7 +23,7 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
-                <a href="INDEX.html">
+                <a href="index.html">
                     KANG
                 </a>
                 <a href="about.html">
