--- a/Kang/index.html
+++ b/Kang/index.html
@@ -23,12 +23,12 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
-                <a href="index.html">
+                <ul><a href="index.html">
                     KANG
-                </a>
-                <a href="about.html">
+                </a></ul>
+                <ul><a href="about.html">
                     ABOUT
-                </a>
+                </a></ul>
             </div>
 
             <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
