--- a/Kang/index.html
+++ b/Kang/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
+        <meta charset="UTF-8">
     </head>
     <body>
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 2cm;">
@@ -39,7 +40,7 @@
             </div>
 
             <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:30px">
-                <h1>Hi! I'm Talent</h1>
+                <h1>Hi! &#U+1F44B; I'm Talent</h1>
              </div>
         </div>
     </body>
