--- a/Kang/index.html
+++ b/Kang/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:30px">
-                <h1>Hi! &#128075; I'm Talent</h1>
+                <h1>Hello &#128075; I'm Talent, data analyst, currently in Jakarta, Indonesia</h1>
              </div>
         </div>
     </body>
