--- a/Kang/index.html
+++ b/Kang/index.html
@@ -41,6 +41,7 @@
 
             <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:30px">
                 <h1>Hello &#128075; I'm Talent, data analyst, currently in Jakarta, Indonesia</h1>
+                <br><h2>currently in Jakarta, Indonesia</h2>
              </div>
         </div>
     </body>
