--- a/Kang/index.html
+++ b/Kang/index.html
@@ -39,9 +39,9 @@
                 </div>
             </div>
 
-            <div class="main col-lg-5 col-md-4" style="background-color: #fdffd7;padding:30px">
-                <h1>Hello &#128075; I'm Talent, data analyst, currently in Jakarta, Indonesia</h1>
-                <br><h2>currently in Jakarta, Indonesia</h2>
+            <div class="main col-lg-6 col-md-5" style="background-color: #fdffd7;padding:30px">
+                <h1>Hello &#128075; I'm Talent, Data Analyst</h1>
+                <br><h3>currently in Jakarta, Indonesia</h3>
              </div>
         </div>
     </body>
