--- a/Kang/index.html
+++ b/Kang/index.html
@@ -40,8 +40,8 @@
             </div>
 
             <div class="main col-lg-6 col-md-5" style="background-color: #fdffd7;padding:30px">
-                <h1>Hello &#128075; I'm Talent, Data Analyst</h1>
-                <br><h3>currently in Jakarta, Indonesia</h3>
+                <h1>Hello &#128075; I'm Talent</h1>
+                <br><h3>Data Analyst, currently in Jakarta, Indonesia</h3>
              </div>
         </div>
     </body>
