--- a/Kang/index.html
+++ b/Kang/index.html
@@ -23,7 +23,7 @@
         </nav>-->
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
+            <div id = "sidebar" class="sidebar col-lg-1 col-md-1 col-xs-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
                     KANG
                 </a></ul>
@@ -32,14 +32,14 @@
                 </a></ul>
             </div>
 
-            <div class="main col-lg-4 col-md-3 col-xs-1" style="background-color: #fdffd7;">
+            <div class="main col-lg-4 col-md-3 col-xs-2" style="background-color: #fdffd7;">
                 <br><br><br><br>
                <div>
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
                 </div>
             </div>
 
-            <div class="main col-lg-5 col-md-4 col-xs-2" style="background-color: #fdffd7;padding:30px">
+            <div class="main col-lg-5 col-md-4 col-xs-3" style="background-color: #fdffd7;padding:30px">
                 <h1>Hello &#128075; I'm Talent</h1>
                 <br><h4>Data Analyst, currently in Jakarta, Indonesia</h4>
              </div>
