--- a/Kang/index.html
+++ b/Kang/index.html
@@ -25,8 +25,9 @@
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1 col-xs-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
-                    KANG
-                </a></ul>
+                    <img alt="About Page" src="android-chrome-512x512.png"
+                    width="70" height="70">
+                </ul>
                 <ul><a href="about.html">
                     ABOUT
                 </a></ul>
