--- a/Kang/index.html
+++ b/Kang/index.html
@@ -7,6 +7,7 @@
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right: 2cm;">
@@ -26,7 +27,7 @@
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1 col-xs-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
-                    width="70" height="70">
+                    width="50" height="50">
                 </ul>
                 <ul><a href="about.html">
                     ABOUT
