--- a/Kang/index.html
+++ b/Kang/index.html
@@ -24,7 +24,7 @@
         </nav>-->
         
         <div class="row">
-            <div id = "sidebar" class="sidebar col-lg-1 col-md-1 col-xs-1" style="background-color: #d2fcfb;" >
+            <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
@@ -34,7 +34,7 @@
                 </a></ul>
             </div>
 
-            <div class="main col-lg-4 col-md-3 col-xs-2" style="background-color: #fdffd7;">
+            <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
                 <br><br><br><br>
                <div>
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683">
