--- a/Kang/index.html
+++ b/Kang/index.html
@@ -26,12 +26,12 @@
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
+                    <h6>KANG</h6>
+                </a></ul>
+                <br><ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
                 </ul>
-                <ul><a href="about.html">
-                    ABOUT
-                </a></ul>
             </div>
 
             <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
