--- a/Kang/index.html
+++ b/Kang/index.html
@@ -28,7 +28,7 @@
                 <ul><a href="index.html">
                     <h4>KANG</h4>
                 </a></ul>
-                <br><ul><a href="about.html">
+                <ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
                 </ul>
