--- a/Kang/index.html
+++ b/Kang/index.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
-                    <h4>KANG</h4>
+                    <h4>Kang</h4>
                 </a></ul>
                 <ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
