--- a/Kang/index.html
+++ b/Kang/index.html
@@ -29,7 +29,7 @@
                     <img alt="Index Page" src="eco-house.png"
                     width="50" height="50">
                 </a></ul>
-                <ul><a href="about.html">
+                <br><br><ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
                </a></ul>
