--- a/Kang/about.html
+++ b/Kang/about.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-
     <head>
         <title>Kang</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -21,7 +20,7 @@
                 <br><br><ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
-            </a></ul>
+                </a></ul>
             </div>
 
             <div class="main col-lg-11 col-md-10" style="background-color: #fdffd7;">
