--- a/Kang/index.html
+++ b/Kang/index.html
@@ -34,6 +34,10 @@
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
                </a></ul>
+               <br><br><ul><a href="contact.html">
+                <img alt="Contact Page" src="mushrooms.png"
+                width="50" height="50">
+           </a></ul>
             </div>
 
             <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
