--- a/Kang/index.html
+++ b/Kang/index.html
@@ -28,7 +28,7 @@
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
                 <ul><a href="index.html">
                     <img alt="Index Page" src="eco-house.png"
-                    width="50" height="50">
+                    width="50" height="50" id="index">
                 </a></ul>
                 <br><br><ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
