--- a/Kang/index.html
+++ b/Kang/index.html
@@ -26,7 +26,7 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
-                <ul><a href="index.html">
+                <ul id="index"><a href="index.html">
                     <img alt="Index Page" src="eco-house.png"
                     width="50" height="50" id="index">
                 </a></ul>
