--- a/Kang/index.html
+++ b/Kang/index.html
@@ -26,10 +26,10 @@
         
         <div class="row">
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb;" >
-                <div id="index"><ul id="index"><a href="index.html">
+                <ul id="index"><a href="index.html">
                     <img alt="Index Page" src="eco-house.png"
                     width="50" height="50" id="index">
-                </a></ul></div>
+                </a></ul>
                 <br><br><ul><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
