--- a/Kang/about.html
+++ b/Kang/about.html
@@ -31,8 +31,14 @@
                 <div class="text-center">
                     <h5 id="about">About</h5>
                     <p id="about1">
-                        Online Resume by CodingCoco | <a href="index.html">Talent Lim</a>
-                    </p><br>
+                        Kang is a static online resume created with HTML, and CSS.
+                        <br>This project name 'Kang' has a meaning behind it.
+                        <br>The origin of the name Kang means work, it is derived from Teochew word 
+                        of <strong>Kang</strong> or the word<strong> 工 gōng</strong> from Mandarin.
+
+                        <br><br><br>
+                        Kang by CodingCoco | <a href="index.html">Talent Lim</a>
+                    </p>
                 </div>
             
                 <footer class="small text-center text-muted">
