--- a/Kang/index.html
+++ b/Kang/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Talent Lim</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="./styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
