--- a/Kang/index.html
+++ b/Kang/index.html
@@ -43,7 +43,7 @@
            </a></ul>
             </div>
 
-            <div class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
+            <div id='imgx' class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
                <div>
                     <img src="IMG_0036.JPG" alt="My Picture" width="512" height="683"
                     style="position: fixed; bottom:0;">
@@ -71,7 +71,7 @@
 
                     <br><br>There are more of my projects, and detail of work experiences available 
                     <a>here</a>.
-                    <br>Please feel free to contact me or send me an email!
+                    <br>Please feel free to connect with me or contact me!
                 </p>
             </div>
         </div>
