--- a/Kang/socials.html
+++ b/Kang/socials.html
@@ -36,10 +36,10 @@
                     width="50" height="50">
                     <span class="tooltiptext">About</span>
                </a></ul>
-               <br><ul id="barcon"><a href="socials.html">
+               <br><ul id="barcon"><a href="contact.html">
                 <img alt="Contact Page" src="mushrooms.png"
                 width="50" height="50">
-                <span class="tooltiptext">Socials</span>
+                <span class="tooltiptext">Contact</span>
            </a></ul>
             </div>
 
@@ -71,13 +71,7 @@
 
                     <br><br>There are more of my projects, and detail of work experiences available 
                     <a>here</a>.
-                    <br>Please feel free to 
-                    <a href="socials.html">
-                    connect with me</a> and 
-                    <a href="mailto:talentlim005+kang@gmail.com">
-                    send me an email
-                    </a>
-                    !
+                    <br>Please feel free to connect with me or contact me!
                 </p>
             </div>
         </div>
