--- a/Kang/index.html
+++ b/Kang/index.html
@@ -69,13 +69,13 @@
                     <br><br>When I turn off my laptop, I love to &#128218; read, &#127939; work out, 
                     and play some sports like &#127992; badminton.
 
-                    <br><br>There are more of my projects, and detail of work experiences available 
+                    <br><br>There are more of my &#9997; projects, and detail of work experiences available 
                     <a>here</a>.
-                    <br>Please feel free to 
+                    <br>Please feel free to &#127812;
                     <a href="socials.html">
-                    connect with me</a> and 
+                    connect with me</a> and &#128231;
                     <a href="mailto:talentlim005+kang@gmail.com">
-                    send me an email
+                    write me an email
                     </a>
                     !
                 </p>
