--- a/Kang/about.html
+++ b/Kang/about.html
@@ -37,12 +37,12 @@
                         of <strong>Kang</strong> or the word<strong> 工 gōng</strong> from Mandarin.
 
                         <br><br><br>
-                        Kang by CodingCoco | <a href="index.html">Talent Lim</a>
+                        Kang by CodingCoco <a href="index.html">Talent Lim</a>
                     </p>
                 </div>
             
                 <footer class="small text-center text-muted">
-                    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a>.
+                    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a> | Site hosted free with GitHub Page
                 </footer>
             </div>
         </div>
