--- a/Kang/index.html
+++ b/Kang/index.html
@@ -36,11 +36,11 @@
                     width="50" height="50">
                     <span class="tooltiptext">About</span>
                </a></ul>
-               <br><ul id="barcon"><a href="socials.html">
+               <br><ul id="barcon"><a href="contact.html">
                 <img alt="Contact Page" src="mushrooms.png"
                 width="50" height="50">
-                <span class="tooltiptext">Socials</span>
-           </a></ul>
+                <span class="tooltiptext">Contact</span>
+                </a></ul>
             </div>
 
             <div id="hide-mobile"class="main col-lg-4 col-md-3" style="background-color: #fdffd7;">
@@ -71,14 +71,17 @@
 
                     <br><br>There are more of my &#9997; projects, and detail of work experiences available 
                     <a>here</a>.
-                    <br>Please feel free to &#127812;
-                    <a href="socials.html">
-                    connect with me</a> and &#128231;
-                    <a href="mailto:talentlim005+kang@gmail.com">
-                    write me an email
-                    </a>
-                    !
                 </p>
+                
+                <h5>
+                    <br><br>Open to opportunities &#127759; in Asia and Australia.
+                    
+                    <div id="wrap">
+                    <br><a href="contact.html">
+                        <button class="button">Reach out to me</button>
+                    </a>
+                    </div>
+                </h5>
             </div>
         </div>
     </body>
