--- a/Kang/about.html
+++ b/Kang/about.html
@@ -38,8 +38,7 @@
                </a></ul>
             </div>
 
-            <div class="main col-lg-11 col-md-10" style="background-color: #fdffd7;">
-                <br><br>
+            <div class="main col-lg-11 col-md-10" style="background-color: #fdffd7;padding:70px; padding-top:80px">
                 <div class="text-center">
                     <h1 id="welcome">Welcome to Kang !</h1>
                 </div>
