--- a/Kang/index.html
+++ b/Kang/index.html
@@ -69,7 +69,7 @@
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
                     
-                    <br><br>Currently working in Permatabank, 
+                    <br><br>Currently working in PermataBank, 
                     &#128202; analysing portfolio and creating insights.
                     <br>Favorite &#128736; tools for analytics include
                     <strong><i>SAS, SQL, Excel, and Python (Jupyter Notebook)</i></strong>.
