--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -49,8 +49,13 @@
                 <div>
                     <br>
                     <h5>October 2021 – Present</h5>
-                    <h4>BUSINESS ANALYTICS (EDMA), PERMATABANK</h4>
-                    <p>Currently enrolled in a trainee program, involved in 3 transformation projects.</p>
+                    <h4>DATA ANALYST (EDMA), PERMATABANK</h4>
+                    <p>Currently enrolled in a trainee program, involved in 3 transformation projects.
+                    <strong><i>Assessed data quality, create data mart, data preparation, EDA, and clean-up </i></strong>of 48+
+                    Mio data records, by 4.5 Mio customers with data anomalies constraint <strong><i>using SAS, and
+                    Python.</i> </strong>Bug fixing on enterprise data, and root cause analysis to source system.
+                    <strong><i>Created framework, identify trends, visualize, and present insights </i></strong>
+                    to internal stakeholders <strong><i>using Power BI, Excel, and PowerPoint.</i></strong></p>
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
@@ -68,10 +73,21 @@
                 </div>
             </div>
 
-            <div class="main col-lg-6 col-md-5 col-xs-3" style="background-color: #fdffd7;padding:100px; padding-top:40px">
+            <div class="main col-lg-6 col-md-5 col-xs-3" style="background-color: #fdffd7;padding:40px; padding-top:40px">
                 
                 <div>
                     <h2>&#127806; Projects</h2>
+                    <i><p style="font-size: 16px">Area of Interest : Analytics and Insights</p></i>
+                </div>
+
+                <div>
+                    <br>
+                    <h5>February 2021</h5>
+                    <h4>STOCKHOLDER PERFORMANCE ANALYZER</h4>
+                    YouTube Link: https://youtu.be/Qg3zCQu3kTM
+                    - Built WebApp to measure growth, profit, and track stocks owned by stockholders with
+                    historical and real time stocks data, utilizing open source API.
+                    - WebApp built with Django, Python, and JavaScript.
                 </div>
 
                 <div>
